--- a/src/App.css
+++ b/src/App.css
@@ -261,7 +261,7 @@ td {
   justify-content: flex-end;
 }
 .modal-body{
-  position: absolute;
+  position: relative !important;
   top: 0;
   left: 0;
   height: 100%;
